[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/TileSet/Tile_set_24x24.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Platforms/FallPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 12 )

[sub_resource type="Animation" id=2]
resource_name = "shake"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}

[node name="FallPlatform" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 72, 72, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 2 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
